kind/3-apps-deploy-service-ingress/tc10-deploy.yaml
# App Server for the Microservice
# Deployment / Replicaset / Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tc10-deploy
  namespace: sigma
  labels:
    app: tc10-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      # Matching the labels from Pod Meta Data
      # Multiple labels can be used
      app: tc10-pod
  minReadySeconds: 5
  strategy:
    # Re-Create / Rolling Update
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1  
  template:
    metadata:
      labels:
        app: tc10-pod
        version: "10"
        release: stable
    spec:
      containers:
      - name: tc10-container
        image: metamagic/tomcat:10
        # Use Always ONLY for Development purpose.
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
        # QoS Guranteed
        # Pod will not be launched if the Hardware 
        # resource is not available
        # To check the run the command kubectl describe pod pod-name
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 500m
            memory: 256Mi
