kind/3-apps-deploy-service-ingress/tc9-deploy.yaml

# App Server for the Microservice
# Deployment / Replicaset / Pod
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tc9-deploy
  namespace: sigma
  labels:
    app: tc9-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      # Matching the labels from Pod Meta Data
      # Multiple labels can be used
      app: tc9-pod
  minReadySeconds: 5
  strategy:
    # Re-Create / Rolling Update
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template:
    metadata:
      labels:
        app: tc9-pod
        version: "9"
        release: stable
    spec:
      containers:
      - name: tc9-container
        image: metamagic/tomcat:9
        # Use Always ONLY for Development purpose.
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources:
        # QoS : Burstable
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 250m
            memory: 128Mi
