kind/3-apps-deploy-service-ingress/tc10-service.yaml
# App Server for the Microservice
# Service Definition
apiVersion: v1
kind: Service
metadata:
  # Service Name: Ex. Payment Service
  name: tc10-service
  namespace: sigma
  labels:
    app: tc10-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    # Instance Labels
    # Ex. Payment Service Instances
    app: tc10-pod
