kind/3-apps-deploy-service-ingress/tc8-service.yaml
# App Server for the Microservice
# Service Definition
apiVersion: v1
kind: Service
metadata:
  # Service Name: Ex. Order Service
  name: tc8-service
  namespace: sigma
  labels:
    app: tc8-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    # Instance Labels
    # Ex. Order Service Instances
    app: tc8-pod
    release: stable
    organization: Apache
