kind/3-apps-deploy-service-ingress/sigma-ingress.yaml
# API Gateway for Routing traffic to
# respective Microservices
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sigma-gw-ingress
  namespace: sigma
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  # Add TLS 
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
          # UI Service
           name: ws-service
           port:
             number: 80
      - path: /server?tc=8
        pathType: Prefix
        backend:
          service:
          # Service 1
           name: tc89-service
           port:
             number: 80
      - path: /server?tc=9
        pathType: Prefix
        backend:
          service:
          # Service 1
           name: tc89-service
           port:
             number: 80
      - path: /server?tc=10
        pathType: Prefix
        backend:
          service:
          # Service 2
           name: tc10-service
           port:
             number: 80
